package edu.fiuba.algo3.modelo;


public interface Bloque {

    void ejecutar(Personaje personaje);

    Bloque opuesto();

    String obtenerNombre();

}
